# Chart

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: daily_analysis.yml
src/: config.py  main.py
src/services/: analysis.py  google.py  market.py
